--- a/zaliczenie_back_db/Dockerfile
+++ b/zaliczenie_back_db/Dockerfile
@@ -8,6 +8,8 @@ RUN mvn package
 
 FROM eclipse-temurin:17-jdk-alpine
 
+RUN apk add curl
+
 WORKDIR /app
 
 COPY --from=buildstage app/target/zaliczenieISI-0.0.1-SNAPSHOT.jar aplikacja.jar
